#9 Updated NSDocumentEntity and NSDocumentTemplate, removed empty summary and remark strings

--- a/docs/api-reference/CRMScript.NetServer.NSCRMScriptEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCRMScriptEntity.yml
@@ -280,7 +280,7 @@ items:
   nameWithType: NSCRMScriptEntity.SetDescription(String)
   fullName: CRMScript.NetServer.NSCRMScriptEntity.SetDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSCRMScriptEntity.SetEjscriptId(Integer)
   fullName: CRMScript.NetServer.NSCRMScriptEntity.SetEjscriptId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetEjscriptId(Integer ejscriptId)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSCRMScriptEntity.SetHierarchyId(Integer)
   fullName: CRMScript.NetServer.NSCRMScriptEntity.SetHierarchyId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetHierarchyId(Integer hierarchyId)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSCRMScriptEntity.SetIncludeId(String)
   fullName: CRMScript.NetServer.NSCRMScriptEntity.SetIncludeId(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIncludeId(String includeId)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSCRMScriptEntity.SetName(String)
   fullName: CRMScript.NetServer.NSCRMScriptEntity.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSCRMScriptEntity.SetRegistered(DateTime)
   fullName: CRMScript.NetServer.NSCRMScriptEntity.SetRegistered(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRegistered(DateTime registered)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSCRMScriptEntity.SetRegisteredAssociateId(Integer)
   fullName: CRMScript.NetServer.NSCRMScriptEntity.SetRegisteredAssociateId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRegisteredAssociateId(Integer registeredAssociateId)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSCRMScriptEntity.SetSource(String)
   fullName: CRMScript.NetServer.NSCRMScriptEntity.SetSource(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSource(String source)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSCRMScriptEntity.SetUniqueIdentifier(String)
   fullName: CRMScript.NetServer.NSCRMScriptEntity.SetUniqueIdentifier(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUniqueIdentifier(String uniqueIdentifier)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSCRMScriptEntity.SetUpdated(DateTime)
   fullName: CRMScript.NetServer.NSCRMScriptEntity.SetUpdated(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdated(DateTime updated)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSCRMScriptEntity.SetUpdatedAssociateId(Integer)
   fullName: CRMScript.NetServer.NSCRMScriptEntity.SetUpdatedAssociateId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdatedAssociateId(Integer updatedAssociateId)
