--- a/docs/api-reference/CRMScript.NetServer.NSCRMScriptResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCRMScriptResult.yml
@@ -82,7 +82,7 @@ items:
   nameWithType: NSCRMScriptResult.SetErrorMessage(String)
   fullName: CRMScript.NetServer.NSCRMScriptResult.SetErrorMessage(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetErrorMessage(String errorMessage)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSCRMScriptResult.SetValid(Bool)
   fullName: CRMScript.NetServer.NSCRMScriptResult.SetValid(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetValid(Bool valid)
