--- a/docs/api-reference/CRMScript.NetServer.NSCountry.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCountry.yml
@@ -274,7 +274,7 @@ items:
   nameWithType: NSCountry.GetInterAreaPrefix()
   fullName: CRMScript.NetServer.NSCountry.GetInterAreaPrefix()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetInterAreaPrefix()
@@ -334,7 +334,7 @@ items:
   nameWithType: NSCountry.GetRank()
   fullName: CRMScript.NetServer.NSCountry.GetRank()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetRank()
