--- a/docs/api-reference/CRMScript.NetServer.NSCredential.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredential.yml
@@ -104,7 +104,7 @@ items:
   nameWithType: NSCredential.SetDisplayValue(String)
   fullName: CRMScript.NetServer.NSCredential.SetDisplayValue(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDisplayValue(String displayValue)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSCredential.SetType()
   fullName: CRMScript.NetServer.NSCredential.SetType()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetType(NSCredentialType type)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSCredential.SetValue(String)
   fullName: CRMScript.NetServer.NSCredential.SetValue(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetValue(String value)
