--- a/docs/api-reference/CRMScript.NetServer.NSCredentialType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialType.yml
@@ -192,7 +192,7 @@ items:
   nameWithType: NSCredentialType.SetDescription(String)
   fullName: CRMScript.NetServer.NSCredentialType.SetDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: "\nThis value is used in a list of authentication providers that can be chosen by an end user and should be a fairly descriptive text. This will typically be SuperOffice is responsible for username and password for a password scenario.\n"
   syntax: 
     content: Void SetDescription(String description)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSCredentialType.SetDisplayType(String)
   fullName: CRMScript.NetServer.NSCredentialType.SetDisplayType(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: "\nThis will typically be Password for user-name/password scenarios and Active Directory User for AD integration.\n"
   syntax: 
     content: Void SetDisplayType(String displayType)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSCredentialType.SetType(String)
   fullName: CRMScript.NetServer.NSCredentialType.SetType(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetType(String type)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSCredentialType.SetValueControl(Integer)
   fullName: CRMScript.NetServer.NSCredentialType.SetValueControl(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetValueControl(Integer valueControl)
