--- a/docs/api-reference/CRMScript.NetServer.NSCredentialUser.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialUser.yml
@@ -148,7 +148,7 @@ items:
   nameWithType: NSCredentialUser.SetColumns(String[])
   fullName: CRMScript.NetServer.NSCredentialUser.SetColumns(String[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetColumns(String[] columns)
