--- a/docs/api-reference/CRMScript.NetServer.NSCredentialsGroup.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialsGroup.yml
@@ -82,7 +82,7 @@ items:
   nameWithType: NSCredentialsGroup.SetDisplayName(String)
   fullName: CRMScript.NetServer.NSCredentialsGroup.SetDisplayName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDisplayName(String displayName)
