--- a/docs/api-reference/CRMScript.NetServer.NSCredentialsGroupUsers.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredentialsGroupUsers.yml
@@ -82,7 +82,7 @@ items:
   nameWithType: NSCredentialsGroupUsers.SetHeadings(String[])
   fullName: CRMScript.NetServer.NSCredentialsGroupUsers.SetHeadings(String[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetHeadings(String[] headings)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSCredentialsGroupUsers.SetUsers(NSCredentialUser[])
   fullName: CRMScript.NetServer.NSCredentialsGroupUsers.SetUsers(NSCredentialUser[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUsers(NSCredentialUser[] users)
