--- a/docs/api-reference/CRMScript.NetServer.NSCriteriaInformation.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCriteriaInformation.yml
@@ -126,7 +126,7 @@ items:
   nameWithType: NSCriteriaInformation.SetCriteriaArchiveColumns()
   fullName: CRMScript.NetServer.NSCriteriaInformation.SetCriteriaArchiveColumns()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCriteriaArchiveColumns(NSArchiveColumnInfo[] criteriaArchiveColumns)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSCriteriaInformation.SetRestrictionGroups(NSArchiveRestrictionGroup[])
   fullName: CRMScript.NetServer.NSCriteriaInformation.SetRestrictionGroups(NSArchiveRestrictionGroup[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRestrictionGroups(NSArchiveRestrictionGroup[] restrictionGroups)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSCriteriaInformation.SetRestrictions(NSArchiveRestrictionInfo[])
   fullName: CRMScript.NetServer.NSCriteriaInformation.SetRestrictions(NSArchiveRestrictionInfo[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRestrictions(NSArchiveRestrictionInfo[] restrictions)
