--- a/docs/api-reference/CRMScript.NetServer.NSCsFeatureToggle.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCsFeatureToggle.yml
@@ -82,7 +82,7 @@ items:
   nameWithType: NSCsFeatureToggle.SetName(String)
   fullName: CRMScript.NetServer.NSCsFeatureToggle.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSCsFeatureToggle.SetState(Bool)
   fullName: CRMScript.NetServer.NSCsFeatureToggle.SetState(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetState(Bool state)
