--- a/docs/api-reference/CRMScript.NetServer.NSCsSessionKey.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCsSessionKey.yml
@@ -104,7 +104,7 @@ items:
   nameWithType: NSCsSessionKey.SetKey(String)
   fullName: CRMScript.NetServer.NSCsSessionKey.SetKey(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetKey(String key)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSCsSessionKey.SetLoginId(Integer)
   fullName: CRMScript.NetServer.NSCsSessionKey.SetLoginId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLoginId(Integer loginId)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSCsSessionKey.SetUserId(Integer)
   fullName: CRMScript.NetServer.NSCsSessionKey.SetUserId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUserId(Integer userId)
