--- a/docs/api-reference/CRMScript.NetServer.NSCurrencyEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCurrencyEntity.yml
@@ -192,7 +192,7 @@ items:
   nameWithType: NSCurrencyEntity.SetCurrencyId(Integer)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetCurrencyId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCurrencyId(Integer currencyId)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSCurrencyEntity.SetDeleted(Bool)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetDeleted(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDeleted(Bool deleted)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSCurrencyEntity.SetName(String)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSCurrencyEntity.SetRank(Integer)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetRank(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSCurrencyEntity.SetRate(Float)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetRate(Float)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRate(Float rate)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSCurrencyEntity.SetTooltip(String)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetTooltip(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTooltip(String tooltip)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSCurrencyEntity.SetUnits(Float)
   fullName: CRMScript.NetServer.NSCurrencyEntity.SetUnits(Float)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUnits(Float units)
