--- a/docs/api-reference/CRMScript.NetServer.NSCustomerCenterConfig.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCustomerCenterConfig.yml
@@ -214,7 +214,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetConfig(String)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetConfig(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetConfig(String config)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetCustConfigId(Integer)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetCustConfigId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCustConfigId(Integer custConfigId)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetCustLangId(Integer)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetCustLangId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCustLangId(Integer custLangId)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetRegistered(DateTime)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetRegistered(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRegistered(DateTime registered)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetRegisteredAssociateId(Integer)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetRegisteredAssociateId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRegisteredAssociateId(Integer registeredAssociateId)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetType(Integer)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetType(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetType(Integer type)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetRegiSetUpdated(DateTime)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetRegiSetUpdated(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdated(DateTime updated)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSCustomerCenterConfig.SetUpdatedAssociateId(Integer)
   fullName: CRMScript.NetServer.NSCustomerCenterConfig.SetUpdatedAssociateId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpdatedAssociateId(Integer updatedAssociateId)
