--- a/docs/api-reference/CRMScript.NetServer.NSCustomerServiceStartup.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCustomerServiceStartup.yml
@@ -126,7 +126,7 @@ items:
   nameWithType: NSCustomerServiceStartup.SetTimezoneEnabled(Bool)
   fullName: CRMScript.NetServer.NSCustomerServiceStartup.SetTimezoneEnabled(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTimezoneEnabled(Bool timezoneEnabled)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSCustomerServiceStartup.SetTZOffset(Integer)
   fullName: CRMScript.NetServer.NSCustomerServiceStartup.SetTZOffset(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTZOffset(Integer tZOffset)
