--- a/docs/api-reference/CRMScript.NetServer.NSDashboard.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDashboard.yml
@@ -48,7 +48,7 @@ items:
   nameWithType: NSDashboard.GetAssociateId()
   fullName: CRMScript.NetServer.NSDashboard.GetAssociateId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -68,7 +68,7 @@ items:
   nameWithType: NSDashboard.GetCaption()
   fullName: CRMScript.NetServer.NSDashboard.GetCaption()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetCaption()
@@ -88,7 +88,7 @@ items:
   nameWithType: NSDashboard.GetDashboardId()
   fullName: CRMScript.NetServer.NSDashboard.GetDashboardId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDashboardId()
@@ -148,7 +148,7 @@ items:
   nameWithType: NSDashboard.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSDashboard.SetAssociateId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSDashboard.SetCaption(String)
   fullName: CRMScript.NetServer.NSDashboard.SetCaption(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCaption(String caption)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSDashboard.SetDashboardId(Integer)
   fullName: CRMScript.NetServer.NSDashboard.SetDashboardId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDashboardId(Integer dashboardId)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSDashboard.SetLayout(Integer)
   fullName: CRMScript.NetServer.NSDashboard.SetLayout(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLayout(Integer layout)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSDashboard.SetTiles(NSDashboardTile[])
   fullName: CRMScript.NetServer.NSDashboard.SetTiles(NSDashboardTile[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTiles(NSDashboardTile[] tiles)
