--- a/docs/api-reference/CRMScript.NetServer.NSDashboardTile.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDashboardTile.yml
@@ -66,7 +66,7 @@ items:
   nameWithType: NSDashboardTile.GetAssociateId()
   fullName: CRMScript.NetServer.NSDashboardTile.GetAssociateId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSDashboardTile.GetCaption()
   fullName: CRMScript.NetServer.NSDashboardTile.GetCaption()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetCaption()
@@ -106,7 +106,7 @@ items:
   nameWithType: NSDashboardTile.GetChartId()
   fullName: CRMScript.NetServer.NSDashboardTile.GetChartId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetChartId()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSDashboardTile.GetChartName()
   fullName: CRMScript.NetServer.NSDashboardTile.GetChartName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetChartName()
@@ -146,7 +146,7 @@ items:
   nameWithType: NSDashboardTile.GetConfig()
   fullName: CRMScript.NetServer.NSDashboardTile.GetConfig()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetConfig()
@@ -166,7 +166,7 @@ items:
   nameWithType: NSDashboardTile.GetDashboardTileId()
   fullName: CRMScript.NetServer.NSDashboardTile.GetDashboardTileId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDashboardTileId()
@@ -186,7 +186,7 @@ items:
   nameWithType: NSDashboardTile.GetDescription()
   fullName: CRMScript.NetServer.NSDashboardTile.GetDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -226,7 +226,7 @@ items:
   nameWithType: NSDashboardTile.GetGroupId()
   fullName: CRMScript.NetServer.NSDashboardTile.GetGroupId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetGroupId()
@@ -246,7 +246,7 @@ items:
   nameWithType: NSDashboardTile.GetIsDefault()
   fullName: CRMScript.NetServer.NSDashboardTile.GetIsDefault()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIsDefault()
@@ -286,7 +286,7 @@ items:
   nameWithType: NSDashboardTile.GetSelectionId()
   fullName: CRMScript.NetServer.NSDashboardTile.GetSelectionId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSelectionId()
@@ -346,7 +346,7 @@ items:
   nameWithType: NSDashboardTile.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSDashboardTile.SetAssociateId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSDashboardTile.SetCaption(String)
   fullName: CRMScript.NetServer.NSDashboardTile.SetCaption(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCaption(String caption)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSDashboardTile.SetChartId(String)
   fullName: CRMScript.NetServer.NSDashboardTile.SetChartId(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetChartId(String chartId)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSDashboardTile.SetChartName(String)
   fullName: CRMScript.NetServer.NSDashboardTile.SetChartName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetChartName(String chartName)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSDashboardTile.SetConfig(String)
   fullName: CRMScript.NetServer.NSDashboardTile.SetConfig(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetConfig(String config)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSDashboardTile.SetDashboardTileId(Integer)
   fullName: CRMScript.NetServer.NSDashboardTile.SetDashboardTileId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDashboardTileId(Integer dashboardTileId)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSDashboardTile.SetDescription(String)
   fullName: CRMScript.NetServer.NSDashboardTile.SetDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -500,8 +500,8 @@ items:
   nameWithType: NSDashboardTile.SetEntityType(Integer)
   fullName: CRMScript.NetServer.NSDashboardTile.SetEntityType(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetEntityType(Integer entityType)
     parameters:
@@ -522,7 +522,7 @@ items:
   nameWithType: NSDashboardTile.SetGroupId(Integer)
   fullName: CRMScript.NetServer.NSDashboardTile.SetGroupId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetGroupId(Integer groupId)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSDashboardTile.SetIsDefault(Bool)
   fullName: CRMScript.NetServer.NSDashboardTile.SetIsDefault(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsDefault(Bool isDefault)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSDashboardTile.SetOptions(NSDashboardTileOption[])
   fullName: CRMScript.NetServer.NSDashboardTile.SetOptions(NSDashboardTileOption[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOptions(NSDashboardTileOption[] options)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSDashboardTile.SetSelectionId(Integer)
   fullName: CRMScript.NetServer.NSDashboardTile.SetSelectionId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSelectionId(Integer selectionId)
@@ -610,8 +610,8 @@ items:
   nameWithType: NSDashboardTile.SetType(Integer)
   fullName: CRMScript.NetServer.NSDashboardTile.SetType(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetType(Integer type)
     parameters:
