--- a/docs/api-reference/CRMScript.NetServer.NSDashboardTileOption.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDashboardTileOption.yml
@@ -52,7 +52,7 @@ items:
   nameWithType: NSDashboardTileOption.GetDefaultDataOption()
   fullName: CRMScript.NetServer.NSDashboardTileOption.GetDefaultDataOption()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetDefaultDataOption()
@@ -72,7 +72,7 @@ items:
   nameWithType: NSDashboardTileOption.GetDescription()
   fullName: CRMScript.NetServer.NSDashboardTileOption.GetDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -112,7 +112,7 @@ items:
   nameWithType: NSDashboardTileOption.GetListName()
   fullName: CRMScript.NetServer.NSDashboardTileOption.GetListName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetListName()
@@ -132,7 +132,7 @@ items:
   nameWithType: NSDashboardTileOption.GetName()
   fullName: CRMScript.NetServer.NSDashboardTileOption.GetName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
@@ -172,7 +172,7 @@ items:
   nameWithType: NSDashboardTileOption.GetValue()
   fullName: CRMScript.NetServer.NSDashboardTileOption.GetValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetValue()
@@ -214,7 +214,7 @@ items:
   nameWithType: NSDashboardTileOption.SetDescription(String)
   fullName: CRMScript.NetServer.NSDashboardTileOption.SetDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSDashboardTileOption.SetListItems(NSMDOListItem[])
   fullName: CRMScript.NetServer.NSDashboardTileOption.SetListItems(NSMDOListItem[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetListItems(NSMDOListItem[] listItems)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSDashboardTileOption.SetListName(String)
   fullName: CRMScript.NetServer.NSDashboardTileOption.SetListName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetListName(String listName)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSDashboardTileOption.SetName(String)
   fullName: CRMScript.NetServer.NSDashboardTileOption.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -302,8 +302,8 @@ items:
   nameWithType: NSDashboardTileOption.SetType(Integer)
   fullName: CRMScript.NetServer.NSDashboardTileOption.SetType(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetType(Integer type)
     parameters:
@@ -324,7 +324,7 @@ items:
   nameWithType: NSDashboardTileOption.SetValue(String)
   fullName: CRMScript.NetServer.NSDashboardTileOption.SetValue(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetValue(String value)
