--- a/docs/api-reference/CRMScript.NetServer.NSDataRight.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDataRight.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSDataRight.GetDescription()
   fullName: CRMScript.NetServer.NSDataRight.GetDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -61,7 +61,7 @@ items:
   nameWithType: NSDataRight.GetValue()
   fullName: CRMScript.NetServer.NSDataRight.GetValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetValue()
