--- a/docs/api-reference/CRMScript.NetServer.NSDatabaseTableAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDatabaseTableAgent.yml
@@ -226,7 +226,7 @@ items:
   fullName: CRMScript.NetServer.NSDatabaseTableAgent.Upsert(String,String[],String[],String[],Integer,Bool)
   type: Method
   summary: "\nInserts or update rows, optionally deleting/zeroing 'leftover' rows. Special support for UDEF, as well as optional extensive information return. Traveltransactionlog and WebHooks are supported\n"
-  remarks: "\n<p></p>\n"
+  remarks: ""
   syntax: 
     content: NSMassOperationResult Upsert(String tableName, String[] columns, String[] keys, String[] data, Integer nomatchAction, Bool returnRowStatus)
     parameters:
