--- a/docs/api-reference/CRMScript.NetServer.NSDiagnosticsAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDiagnosticsAgent.yml
@@ -334,7 +334,7 @@ items:
   nameWithType: NSDiagnosticsAgent.WebAppUsageExistsInPeriod(Integer,String)
   fullName: CRMScript.NetServer.NSDiagnosticsAgent.WebAppUsageExistsInPeriod(Integer,String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool WebAppUsageExistsInPeriod(Integer associateId, String viewState, DateTime fromDate)
