--- a/docs/api-reference/CRMScript.NetServer.NSDictionaryStepInformation.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDictionaryStepInformation.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSDictionaryStepInformation.GetName()
   fullName: CRMScript.NetServer.NSDictionaryStepInformation.GetName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSDictionaryStepInformation.GetStepNumber()
   fullName: CRMScript.NetServer.NSDictionaryStepInformation.GetStepNumber()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetStepNumber()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSDictionaryStepInformation.SetName(String)
   fullName: CRMScript.NetServer.NSDictionaryStepInformation.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSDictionaryStepInformation.SetStepNumber(Integer)
   fullName: CRMScript.NetServer.NSDictionaryStepInformation.SetStepNumber(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetStepNumber(Integer stepNumber)
