--- a/docs/api-reference/CRMScript.NetServer.NSDocument.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocument.yml
@@ -154,7 +154,7 @@ items:
   nameWithType: NSDocument.GetContactName()
   fullName: CRMScript.NetServer.NSDocument.GetContactName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetContactName()
@@ -174,7 +174,7 @@ items:
   nameWithType: NSDocument.GetDescription()
   fullName: CRMScript.NetServer.NSDocument.GetDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDescription()
@@ -194,7 +194,7 @@ items:
   nameWithType: NSDocument.GetDocumentId()
   fullName: CRMScript.NetServer.NSDocument.GetDocumentId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDocumentId()
@@ -214,7 +214,7 @@ items:
   nameWithType: NSDocument.GetDocumentTemplate()
   fullName: CRMScript.NetServer.NSDocument.GetDocumentTemplate()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDocumentTemplate()
@@ -233,7 +233,7 @@ items:
   nameWithType: NSDocument.GetHeader()
   fullName: CRMScript.NetServer.NSDocument.GetHeader()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetHeader()
@@ -253,7 +253,7 @@ items:
   nameWithType: NSDocument.GetIsPublished()
   fullName: CRMScript.NetServer.NSDocument.GetIsPublished()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIsPublished()
@@ -273,7 +273,7 @@ items:
   nameWithType: NSDocument.GetName()
   fullName: CRMScript.NetServer.NSDocument.GetName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
@@ -293,7 +293,7 @@ items:
   nameWithType: NSDocument.GetOurRef()
   fullName: CRMScript.NetServer.NSDocument.GetOurRef()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetOurRef()
@@ -313,7 +313,7 @@ items:
   nameWithType: NSDocument.GetPersonFullName()
   fullName: CRMScript.NetServer.NSDocument.GetPersonFullName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPersonFullName()
@@ -333,7 +333,7 @@ items:
   nameWithType: NSDocument.GetPersonId()
   fullName: CRMScript.NetServer.NSDocument.GetPersonId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -353,7 +353,7 @@ items:
   nameWithType: NSDocument.GetProjectId()
   fullName: CRMScript.NetServer.NSDocument.GetProjectId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetProjectId()
@@ -373,7 +373,7 @@ items:
   nameWithType: NSDocument.GetProjectName()
   fullName: CRMScript.NetServer.NSDocument.GetProjectName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetProjectName()
@@ -393,7 +393,7 @@ items:
   nameWithType: NSDocument.GetSnum()
   fullName: CRMScript.NetServer.NSDocument.GetSnum()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSnum()
@@ -413,7 +413,7 @@ items:
   nameWithType: NSDocument.GetYourRef()
   fullName: CRMScript.NetServer.NSDocument.GetYourRef()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetYourRef()
@@ -433,7 +433,7 @@ items:
   nameWithType: NSDocument.SetAssociateFullName(String)
   fullName: CRMScript.NetServer.NSDocument.SetAssociateFullName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAssociateFullName(String associateFullName)
@@ -453,7 +453,7 @@ items:
   nameWithType: NSDocument.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSDocument.SetAssociateId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
@@ -475,7 +475,7 @@ items:
   nameWithType: NSDocument.SetAttention(String)
   fullName: CRMScript.NetServer.NSDocument.SetAttention(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAttention(String attention)
@@ -497,7 +497,7 @@ items:
   nameWithType: NSDocument.SetContactId(Integer)
   fullName: CRMScript.NetServer.NSDocument.SetContactId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetContactId(Integer contactId)
@@ -519,7 +519,7 @@ items:
   nameWithType: NSDocument.SetContactName(String)
   fullName: CRMScript.NetServer.NSDocument.SetContactName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetContactName(String contactName)
@@ -541,7 +541,7 @@ items:
   nameWithType: NSDocument.SetDescription(String)
   fullName: CRMScript.NetServer.NSDocument.SetDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDescription(String description)
@@ -563,7 +563,7 @@ items:
   nameWithType: NSDocument.SetDocumentId(Integer)
   fullName: CRMScript.NetServer.NSDocument.SetDocumentId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDocumentId(Integer documentId)
@@ -607,7 +607,7 @@ items:
   nameWithType: NSDocument.SetHeader(String)
   fullName: CRMScript.NetServer.NSDocument.SetHeader(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetHeader(String header)
@@ -629,7 +629,7 @@ items:
   nameWithType: NSDocument.SetIsPublished(Bool)
   fullName: CRMScript.NetServer.NSDocument.SetIsPublished(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsPublished(Bool isPublished)
@@ -651,7 +651,7 @@ items:
   nameWithType: NSDocument.SetName(String)
   fullName: CRMScript.NetServer.NSDocument.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -673,7 +673,7 @@ items:
   nameWithType: NSDocument.SetOurRef(String)
   fullName: CRMScript.NetServer.NSDocument.SetOurRef(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOurRef(String ourRef)
@@ -695,7 +695,7 @@ items:
   nameWithType: NSDocument.SetPersonFullName(String)
   fullName: CRMScript.NetServer.NSDocument.SetPersonFullName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonFullName(String personFullName)
@@ -717,7 +717,7 @@ items:
   nameWithType: NSDocument.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSDocument.SetPersonId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
@@ -739,7 +739,7 @@ items:
   nameWithType: NSDocument.SetProjectId(Integer)
   fullName: CRMScript.NetServer.NSDocument.SetProjectId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetProjectId(Integer projectId)
@@ -761,7 +761,7 @@ items:
   nameWithType: NSDocument.SetProjectName(String)
   fullName: CRMScript.NetServer.NSDocument.SetProjectName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetProjectName(String projectName)
@@ -783,7 +783,7 @@ items:
   nameWithType: NSDocument.SetSnum(Integer)
   fullName: CRMScript.NetServer.NSDocument.SetSnum(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSnum(Integer snum)
@@ -805,7 +805,7 @@ items:
   nameWithType: NSDocument.SetYourRef(String)
   fullName: CRMScript.NetServer.NSDocument.SetYourRef(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetYourRef(String yourRef)
