--- a/docs/api-reference/CRMScript.NetServer.NSDocumentAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentAgent.yml
@@ -2173,7 +2173,7 @@ items:
   fullName: CRMScript.NetServer.NSDocumentAgent.SubstituteTemplateVariables(String,Integer,Integer,Integer,Integer,Integer,Integer,Integer,Integer,String)
   type: Method
   summary: "\nParses the source string, and replaces any template variable tags with their values, based on the IDs given in the other parameters.\n"
-  remarks: "\n<p></p>\n"
+  remarks: ""
   syntax: 
     content: String SubstituteTemplateVariables(String source, Integer generatorEncoding, Integer contactId, Integer personId, Integer appointmentId, Integer documentId, Integer saleId, Integer selectionId, Integer projectId, String cultureName)
     parameters:
@@ -2242,7 +2242,7 @@ items:
   fullName: CRMScript.NetServer.NSDocumentAgent.SubstituteTemplateVariablesWithCustomTags(String,Integer,String[],String[],Integer,Integer,Integer,Integer,Integer,Integer,Integer,String)
   type: Method
   summary: "\nParse the source string, and replace any template variable tags with their values, based on the IDs given in the other parameters.<p><p/>\nThis method also takes a pair of arrays specifying custom tags and their values; these tags will be available during substitution in addition to all the existing tags. Custom values will override values otherwise set.\n"
-  remarks: "\n<p></p>\n"
+  remarks: ""
   syntax: 
     content: String SubstituteTemplateVariablesWithCustomTags(String source, Integer generatorEncoding, String[] customTags, String[] customValues, Integer contactId, Integer personId, Integer appointmentId, Integer documentId, Integer saleId, Integer selectionId, Integer projectId, String cultureName)
     parameters:
@@ -2297,7 +2297,7 @@ items:
   fullName: CRMScript.NetServer.NSDocumentAgent.SubstituteTemplateVariablesWithCustomTags2(String,Integer,Map,Integer,Integer,Integer,Integer,Integer,Integer,Integer,String)
   type: Method
   summary: "\nParse the source string, and replace any template variable tags with their values, based on the IDs given in the other parameters.<p><p/>\nThis method also takes a pair of arrays specifying custom tags and their values; these tags will be available during substitution in addition to all the existing tags. Custom values will override values otherwise set.\n"
-  remarks: "\n<p></p>\n"
+  remarks: ""
   syntax: 
     content: String SubstituteTemplateVariablesWithCustomTags2(String source, Integer generatorEncoding, Map customTags, Integer contactId, Integer personId, Integer appointmentId, Integer documentId, Integer saleId, Integer selectionId, Integer projectId, String cultureName)
     parameters:
