--- a/docs/api-reference/CRMScript.NetServer.NSDocumentPreview.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentPreview.yml
@@ -46,7 +46,7 @@ items:
   nameWithType: NSDocumentPreview.GetName()
   fullName: CRMScript.NetServer.NSDocumentPreview.GetName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
@@ -66,7 +66,7 @@ items:
   nameWithType: NSDocumentPreview.GetSize()
   fullName: CRMScript.NetServer.NSDocumentPreview.GetSize()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSize()
@@ -86,7 +86,7 @@ items:
   nameWithType: NSDocumentPreview.GetStream()
   fullName: CRMScript.NetServer.NSDocumentPreview.GetStream()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSStream GetStream()
@@ -106,7 +106,7 @@ items:
   nameWithType: NSDocumentPreview.GetType()
   fullName: CRMScript.NetServer.NSDocumentPreview.GetType()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetType()
@@ -126,7 +126,7 @@ items:
   nameWithType: NSDocumentPreview.SetName(String)
   fullName: CRMScript.NetServer.NSDocumentPreview.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSDocumentPreview.SetSize(Integer)
   fullName: CRMScript.NetServer.NSDocumentPreview.SetSize(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSize(Integer size)
@@ -170,7 +170,7 @@ items:
   nameWithType: NSDocumentPreview.SetStream(NSStream)
   fullName: CRMScript.NetServer.NSDocumentPreview.SetStream(NSStream)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetStream(NSStream stream)
@@ -192,7 +192,7 @@ items:
   nameWithType: NSDocumentPreview.SetType(String)
   fullName: CRMScript.NetServer.NSDocumentPreview.SetType(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetType(String type)
