--- a/docs/api-reference/CRMScript.NetServer.NSEMailConnectionInfoExtended.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEMailConnectionInfoExtended.yml
@@ -75,7 +75,7 @@ items:
   nameWithType: NSEMailConnectionInfoExtended.GetPort()
   fullName: CRMScript.NetServer.NSEMailConnectionInfoExtended.GetPort()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPort()
@@ -94,7 +94,7 @@ items:
   nameWithType: NSEMailConnectionInfoExtended.GetProtocol()
   fullName: CRMScript.NetServer.NSEMailConnectionInfoExtended.GetProtocol()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetProtocol()
