--- a/docs/api-reference/CRMScript.NetServer.NSErpSyncFieldValue.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSErpSyncFieldValue.yml
@@ -54,7 +54,7 @@ items:
   nameWithType: NSErpSyncFieldValue.GetDisplayName()
   fullName: CRMScript.NetServer.NSErpSyncFieldValue.GetDisplayName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDisplayName()
@@ -73,7 +73,7 @@ items:
   nameWithType: NSErpSyncFieldValue.GetDisplayValue()
   fullName: CRMScript.NetServer.NSErpSyncFieldValue.GetDisplayValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDisplayValue()
@@ -130,7 +130,7 @@ items:
   nameWithType: NSErpSyncFieldValue.GetValue()
   fullName: CRMScript.NetServer.NSErpSyncFieldValue.GetValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetValue()
