--- a/docs/api-reference/CRMScript.NetServer.NSExtendedLicenseInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExtendedLicenseInfo.yml
@@ -35,7 +35,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.GetAccumulatedNextCheckDate()
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.GetAccumulatedNextCheckDate()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetAccumulatedNextCheckDate()
@@ -54,7 +54,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.GetCanBeActivated()
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.GetCanBeActivated()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetCanBeActivated()
@@ -73,7 +73,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.GetCurrent()
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.GetCurrent()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSLicenseInfo GetCurrent()
@@ -111,7 +111,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.GetNew()
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.GetNew()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSLicenseInfo GetNew()
@@ -130,7 +130,7 @@ items:
   nameWithType: NSExtendedLicenseInfo.GetReason()
   fullName: CRMScript.NetServer.NSExtendedLicenseInfo.GetReason()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetReason()
