--- a/docs/api-reference/CRMScript.NetServer.NSLicenseOwner.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLicenseOwner.yml
@@ -31,7 +31,7 @@ items:
   nameWithType: NSLicenseOwner.GetDescription()
   fullName: CRMScript.NetServer.NSLicenseOwner.GetDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDescription()
