--- a/docs/api-reference/CRMScript.NetServer.NSLicenseResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLicenseResult.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSLicenseResult.GetReason()
   fullName: CRMScript.NetServer.NSLicenseResult.GetReason()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetReason()
@@ -46,7 +46,7 @@ items:
   nameWithType: NSLicenseResult.GetSucceeded()
   fullName: CRMScript.NetServer.NSLicenseResult.GetSucceeded()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetSucceeded()
