--- a/docs/api-reference/CRMScript.NetServer.NSMailMergeSettings.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMailMergeSettings.yml
@@ -407,7 +407,7 @@ items:
   nameWithType: NSMailMergeSettings.GetSynchronous()
   fullName: CRMScript.NetServer.NSMailMergeSettings.GetSynchronous()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetSynchronous()
