--- a/docs/api-reference/CRMScript.NetServer.NSModuleLicenseLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSModuleLicenseLink.yml
@@ -201,7 +201,7 @@ items:
   nameWithType: NSModuleLicenseLink.GetPrerequisiteModuleName()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetPrerequisiteModuleName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPrerequisiteModuleName()
@@ -220,7 +220,7 @@ items:
   nameWithType: NSModuleLicenseLink.GetSortOrder()
   fullName: CRMScript.NetServer.NSModuleLicenseLink.GetSortOrder()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSortOrder()
