--- a/docs/api-reference/CRMScript.NetServer.NSMultiAlarmData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMultiAlarmData.yml
@@ -48,7 +48,7 @@ items:
   nameWithType: NSMultiAlarmData.GetPollingInterval()
   fullName: CRMScript.NetServer.NSMultiAlarmData.GetPollingInterval()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPollingInterval()
@@ -67,7 +67,7 @@ items:
   nameWithType: NSMultiAlarmData.GetSilentAfter()
   fullName: CRMScript.NetServer.NSMultiAlarmData.GetSilentAfter()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSilentAfter()
