--- a/docs/api-reference/CRMScript.NetServer.NSOutgoingMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSOutgoingMessage.yml
@@ -111,7 +111,7 @@ items:
   nameWithType: NSOutgoingMessage.GetSuggestedSessionKey()
   fullName: CRMScript.NetServer.NSOutgoingMessage.GetSuggestedSessionKey()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetSuggestedSessionKey()
