--- a/docs/api-reference/CRMScript.NetServer.NSPhoneListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPhoneListItem.yml
@@ -195,7 +195,7 @@ items:
   nameWithType: NSPhoneListItem.GetTooltip()
   fullName: CRMScript.NetServer.NSPhoneListItem.GetTooltip()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetTooltip()
