--- a/docs/api-reference/CRMScript.NetServer.NSPocketStartupData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketStartupData.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSPocketStartupData.GetBaseLocaleTimeZoneData()
   fullName: CRMScript.NetServer.NSPocketStartupData.GetBaseLocaleTimeZoneData()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSTimeZoneData GetBaseLocaleTimeZoneData()
@@ -136,7 +136,7 @@ items:
   nameWithType: NSPocketStartupData.GetPhoneLocaleTimeZoneData()
   fullName: CRMScript.NetServer.NSPocketStartupData.GetPhoneLocaleTimeZoneData()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSTimeZoneData GetPhoneLocaleTimeZoneData()
