--- a/docs/api-reference/CRMScript.NetServer.NSPreference.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreference.yml
@@ -197,7 +197,7 @@ items:
   nameWithType: NSPreference.GetTabOrder()
   fullName: CRMScript.NetServer.NSPreference.GetTabOrder()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSTabOrder GetTabOrder()
