--- a/docs/api-reference/CRMScript.NetServer.NSProject.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProject.yml
@@ -135,7 +135,7 @@ items:
   nameWithType: NSProject.GetIsPublished()
   fullName: CRMScript.NetServer.NSProject.GetIsPublished()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetIsPublished()
@@ -325,7 +325,7 @@ items:
   nameWithType: NSProject.GetTypeId()
   fullName: CRMScript.NetServer.NSProject.GetTypeId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetTypeId()
