--- a/docs/api-reference/CRMScript.NetServer.NSTimeZoneData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTimeZoneData.yml
@@ -37,7 +37,7 @@ items:
   nameWithType: NSTimeZoneData.GetIsoNumber()
   fullName: CRMScript.NetServer.NSTimeZoneData.GetIsoNumber()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetIsoNumber()
