--- a/docs/api-reference/CRMScript.NetServer.NSUserValidationResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserValidationResult.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSUserValidationResult.GetReason()
   fullName: CRMScript.NetServer.NSUserValidationResult.GetReason()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetReason()
@@ -46,7 +46,7 @@ items:
   nameWithType: NSUserValidationResult.GetResult()
   fullName: CRMScript.NetServer.NSUserValidationResult.GetResult()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetResult()
