--- a/docs/api-reference/CRMScript.NetServer.NSVisibleFor.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSVisibleFor.yml
@@ -29,7 +29,7 @@ items:
   nameWithType: NSVisibleFor.GetDisplayValue()
   fullName: CRMScript.NetServer.NSVisibleFor.GetDisplayValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDisplayValue()
@@ -67,7 +67,7 @@ items:
   nameWithType: NSVisibleFor.GetVisibleId()
   fullName: CRMScript.NetServer.NSVisibleFor.GetVisibleId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetVisibleId()
