--- a/docs/api-reference/CRMScript.NetServer.NSDuplicateRule.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDuplicateRule.yml
@@ -46,7 +46,7 @@ items:
   nameWithType: NSDuplicateRule.GetDisplayName()
   fullName: CRMScript.NetServer.NSDuplicateRule.GetDisplayName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetDisplayName()
@@ -65,7 +65,7 @@ items:
   nameWithType: NSDuplicateRule.GetDisplayTooltip()
   fullName: CRMScript.NetServer.NSDuplicateRule.GetDisplayTooltip()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: GetDisplayTooltip()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSDuplicateRule.GetIsActive()
   fullName: CRMScript.NetServer.NSDuplicateRule.GetIsActive()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: GetIsActive()
@@ -103,7 +103,7 @@ items:
   nameWithType: NSDuplicateRule.GetName()
   fullName: CRMScript.NetServer.NSDuplicateRule.GetName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: GetName()
@@ -122,7 +122,7 @@ items:
   nameWithType: NSDuplicateRule.SetDisplayName(String)
   fullName: CRMScript.NetServer.NSDuplicateRule.SetDisplayName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDisplayName(String name)
@@ -143,7 +143,7 @@ items:
   nameWithType: NSDuplicateRule.SetDisplayTooltip(String)
   fullName: CRMScript.NetServer.NSDuplicateRule.SetDisplayTooltip(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDisplayTooltip(String tooltip)
@@ -164,7 +164,7 @@ items:
   nameWithType: NSDuplicateRule.SetIsActive(Bool)
   fullName: CRMScript.NetServer.NSDuplicateRule.SetIsActive(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetIsActive(Bool isActive)
@@ -185,7 +185,7 @@ items:
   nameWithType: NSDuplicateRule.SetName(String)
   fullName: CRMScript.NetServer.NSDuplicateRule.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
