--- a/docs/api-reference/CRMScript.NetServer.NSExtendedModuleLicense.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExtendedModuleLicense.yml
@@ -39,7 +39,7 @@ items:
   nameWithType: NSExtendedModuleLicense.GetCurrent()
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.GetCurrent()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSModuleLicense GetCurrent()
@@ -58,7 +58,7 @@ items:
   nameWithType: NSExtendedModuleLicense.GetNew()
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.GetNew()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSModuleLicense GetNew()
@@ -77,7 +77,7 @@ items:
   nameWithType: NSExtendedModuleLicense.GetNumberOfLicensesAdded()
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.GetNumberOfLicensesAdded()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetNumberOfLicensesAdded()
@@ -96,7 +96,7 @@ items:
   nameWithType: NSExtendedModuleLicense.GetNumberOfLicensesFree()
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.GetNumberOfLicensesFree()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetNumberOfLicensesFree()
@@ -115,7 +115,7 @@ items:
   nameWithType: NSExtendedModuleLicense.GetNumberOfLicensesInUse()
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.GetNumberOfLicensesInUse()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetNumberOfLicensesInUse()
@@ -134,7 +134,7 @@ items:
   nameWithType: NSExtendedModuleLicense.GetNumberOfLicensesNewFree()
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.GetNumberOfLicensesNewFree()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetNumberOfLicensesNewFree()
@@ -153,7 +153,7 @@ items:
   nameWithType: NSExtendedModuleLicense.GetNumberOfLicensesNewTotal()
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.GetNumberOfLicensesNewTotal()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetNumberOfLicensesNewTotal()
@@ -172,7 +172,7 @@ items:
   nameWithType: NSExtendedModuleLicense.GetNumberOfLicensesTotal()
   fullName: CRMScript.NetServer.NSExtendedModuleLicense.GetNumberOfLicensesTotal()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetNumberOfLicensesTotal()
