--- a/docs/api-reference/CRMScript.NetServer.NSFieldValueInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldValueInfo.yml
@@ -171,7 +171,7 @@ items:
   nameWithType: NSFieldValueInfo.GetEncodedDataCaption()
   fullName: CRMScript.NetServer.NSFieldValueInfo.GetEncodedDataCaption()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetEncodedDataCaption()
@@ -190,7 +190,7 @@ items:
   nameWithType: NSFieldValueInfo.GetEncodedDataCaptionDescription()
   fullName: CRMScript.NetServer.NSFieldValueInfo.GetEncodedDataCaptionDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetEncodedDataCaptionDescription()
