--- a/docs/api-reference/CRMScript.NetServer.NSSatellite.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSatellite.yml
@@ -39,7 +39,7 @@ items:
   nameWithType: NSSatellite.GetArea()
   fullName: CRMScript.NetServer.NSSatellite.GetArea()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSArea GetArea()
@@ -58,7 +58,7 @@ items:
   nameWithType: NSSatellite.GetContact()
   fullName: CRMScript.NetServer.NSSatellite.GetContact()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSContact GetContact()
@@ -96,7 +96,7 @@ items:
   nameWithType: NSSatellite.GetCreatedBy()
   fullName: CRMScript.NetServer.NSSatellite.GetCreatedBy()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSAssociate GetCreatedBy()
@@ -172,7 +172,7 @@ items:
   nameWithType: NSSatellite.GetUpdatedBy()
   fullName: CRMScript.NetServer.NSSatellite.GetUpdatedBy()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSAssociate GetUpdatedBy()
